conditions.Conditions.scala.error
Compilation error:
Conditions:1: error: '(' expected but identifier found.
if isFacingWall();==True {
   ^Conditions:1: error: illegal start of simple expression
if isFacingWall();==True {
                 ^Conditions:3: error: ';' expected but 'else' found.
} else {
  ^