conditions.Conditions.scala.code
if isFacingWall();==True {
  backward();
} else {
  forward();
}